explore and evolve h1s are bumped down and no longer overlapping animation on mobile

--- a/css/less/layout/section.less
+++ b/css/less/layout/section.less
@@ -66,4 +66,9 @@ SECTION
 			right:auto;
 		}
 	}
+	#explore, #evolve {
+		h1 {
+			margin-top: 4rem;
+		}
+	}
 }
